<resources>
    <string name="app_name">MadLevel6Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="movies_fragment_label">Movies Fragment</string>
    <string name="selected_movie_fragment_label">Selected Movie Fragment</string>
    <string name="the_most_popular_movies_of">The most popular movies of:</string>
    <string name="Year">Year</string>
    <string name="submit">Submit</string>
    <string name="image_movies">image_movies</string>
    <string name="backdrop_image">backdrop_image</string>
    <string name="poster_image">Poster Image</string>
    <string name="Movies_display">Movies display</string>
    <string name="movietitle">movieTitle</string>
    <string name="date" />
    <string name="overview">Overview</string>
    <string name="ratingtext" />
    <string name="overviewtext" />
    <string name="ratingstar">ratingStar</string>
    <string name="ratingStar" />
    <string name="ratingText">ratingText</string>
    <string name="overviewText">overviewText</string>
</resources>